k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ostad-ingress
  namespace: mohammad-ullah
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: app.local
      http:
        paths:
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ostad-ui
                port:
                  number: 5173
          - path: /dash(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ostad-ui
                port:
                  number: 5173
          - path: /admin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mongo-express
                port:
                  number: 8081
